objects/Account_Executive_User__c.object
<CustomObject>
    <fields>
        <fullName>Account_Executive_Sponsor__c</fullName>
        <label>Account Executive Sponsor</label>
        <referenceTo>Account_Executive_Sponsor__c</referenceTo>
        <relationshipLabel>Account Executive Users</relationshipLabel>
        <relationshipName>Account_Executive_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Lead</fullName>
                </value>
                <value>
                    <fullName>Lead Sponsor</fullName>
                </value>
                <value>
                    <fullName>Supporting Sponsor</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Executive_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Executive User</label>
    <nameField>
        <displayFormat>ESPU-{00000}</displayFormat>
        <label>Executive User</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Executive Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>